SPOI-2371 saves dt-site.xml in the correct directory, backup old dt-site.xml